--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "test": "nodemon src/index.js",
-    "test": "node src/index.js"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
